--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,7 @@ pre-commit                    # hook de formatage/qualité (optionnel)
 
 # Env management
 python-dotenv
+
+
+# Embeddings / NLP
+hf_xet
