--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 # ===== Requirements for GenAI Workflow Automation MVP =====
+hf_text                        # pour le traitement de texte
 
 # Web/API
-fastapi                # pour l’API backend
+fastapi                # pour l'API backend
 uvicorn[standard]      # serveur ASGI
+requests>=2.31.0       # pour les requêtes HTTP (utilisé dans restore_snapshot.py)
 
 # Vector database / retrieval
 qdrant-client>=1.14.2  # client Python pour la base vectorielle Qdrant :contentReference[oaicite:0]{index=0}
@@ -15,7 +17,8 @@ openai                        # pour l’API OpenAI (si usage)
 # Pipeline GenAI / workflow
 langchain>=0.0.278            # intégration retrieval + LLM (ex : LangChain)
 langgraph                      # pour la création de graphes d'agents
-langchain_openai               # pour l'intégration avec l'API OpenAI
+langchain_openai               # pour l'intégration avec l'API OpenAI   
+langchain-text-splitters       # pour le chuncking de texte
 
 # Data processing & utilities
 pandas>=1.5.0
