--- a/.github/workflows/cd-frontend-pages.yml
+++ b/.github/workflows/cd-frontend-pages.yml
@@ -2,7 +2,7 @@ name: CD Frontend (Pages)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main ]     # déclenche aussi sur develop si vous préférez
     paths:
       - "frontend/**"
 
@@ -23,21 +23,17 @@ jobs:
         working-directory: frontend
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
-
       - run: npm ci
-
-      # IMPORTANT pour Vite: définir le base path du projet Pages (/REPO/)
+      # IMPORTANT pour Vite (site de projet GitHub Pages): base = /<repo>/
       - name: Build (Vite) avec base path
         env:
           REPO_NAME: ${{ github.event.repository.name }}
         run: npm run build -- --base=/$REPO_NAME/
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
