--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "puppeteer": "^24.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
