--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
 *.py[cod]
 *$py.class
-.env
 .vscode
 data/
 outputs/
 # snapshots/
 node_modules/
 **/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv
+.git
+.gitignore
+.dockerignore
+*.md
+node_modules
+.next
+dist
+build
+.DS_Store
+.env
+.env.local
+*.log
