Configuration railway.toml

--- a/railway.toml
+++ b/railway.toml
@@ -14,7 +14,7 @@ healthcheckInterval = 10
 [[services]]
 name = "backend"
 builder = "dockerfile"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "pip install --no-cache-dir -r requirements.txt"
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 numReplicas = 1
 
