--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "lucide-react": "^0.554.0",
     "puppeteer": "^24.29.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
